--- a/part_I.html
+++ b/part_I.html
@@ -2,39 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<!-- <script src="sillysentence_jquery.js"></script>-->
-<link rel="stylesheet" type="text/css" href="silly-sentences.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="sillysentence_jquery.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-<script src="silly-sentences.js"></script>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  crossorigin="anonymous"></script>
+<script src="sillysentence_jquery.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://use.fontawesome.com/3bd8fafe5e.js"></script>
 </head>
 <body class="body">
-
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-xs-12">
-			<div class="centerContainer">
-				<h1 id="heading">Silly Sentence Generator</h1>
-					<p id="description">Have fun creating a nonsense sentence. Click
-					on the 'Randomise me!' button to generate something silly.</p>
-					<div id="result"></div>
-					<button class="btn" id="random">Randomise me!</button>
-					<div id="reset"></div>
+	<div class="container-fluid" id="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="centerContainer" id="centerContainer1">
+					<h1 id="heading">Silly Sentence Generator</h1>
+						<p id="description">Have fun creating a nonsense sentence. Click
+						on the 'Randomise me!' button to generate something silly.</p>
+						<div id="result"></div>
+						<button class="btn" id="random">Randomise me!</button>
+						<div id="reset"></div>
 					
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
-
-</script>
-
 </body>
 </html>
